--- a/src/RoslynMapper.WebSite/Content/Site.css
+++ b/src/RoslynMapper.WebSite/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
-    padding-bottom: 20px;
+    padding-bottom: 20px;    
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* Set padding to keep content from hitting the edges */
