--- a/src/RoslynMapper.WebSite/Views/Home/Index.cshtml
+++ b/src/RoslynMapper.WebSite/Views/Home/Index.cshtml
@@ -3,29 +3,41 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Roslyn Mapper</h1>
+    <p class="lead">Roslyn Mapper is a free open source .NET library. It is an object-object mapper built on top of the <a href="http://roslyn.codeplex.com/">.NET Compiler Platform ("Roslyn")</a>.  The main goal is to build an object-object mapper with good mapping performance and a convenient API.</p>
+    
+    <p><a href="@Url.Action("Index", "GetStarted")" class="btn btn-primary btn-lg">Get started &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Download from Nuget</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Get the latest <a href="http://www.nuget.org/packages/RoslynMapper/">RoslynMapper Library Package</a> from Nuget. Install from the NuGet package manager console:
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>
+            <pre>Install-Package RoslynMapper -Version 0.1.6-alpha -Pre</pre>
+        </p>
+        <a class="btn btn-lg btn-primary" href="http://www.nuget.org/packages/RoslynMapper/" target="_blank">
+            <i class="fa fa-download fa-lg"></i> Download
+        </a>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>View on Github</h2>
+        <p>RoslynMapper is an open source project hosted on github. You can browse the source code via the <a href="https://github.com/liuhongbo/RoslynMapper">web</a> or use git to clone the source repository.</p>
+        <p>
+            <pre>git clone https://github.com/liuhongbo/RoslynMapper.git</pre>
+        </p>      
+
+        <a class="btn btn-lg btn-primary" href="https://github.com/liuhongbo/RoslynMapper" target="_blank">
+            <i class="fa fa-github fa-lg"></i> Source code
+        </a>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Get help</h2>
+        <p>RoslynMapper provides a easy-to-use API. If you have any questions about how to use RoslynMapper. Read the <a href="@Url.Action("index","Document")">docoment</a>. <br />You can create a issue on <a href="https://github.com/liuhongbo/RoslynMapper/issues">github</a> if you found bugs, issues or feature requests.  Contribution on the source code, documents always welcomed.</p>
+        <a class="btn btn-lg btn-primary" href="@Url.Action("Index","Document")">
+            <i class="fa fa-coffee fa-lg"></i> Read document
+        </a>
     </div>
 </div>
