--- a/src/RoslynMapper.WebSite/Views/Features/Index.cshtml
+++ b/src/RoslynMapper.WebSite/Views/Features/Index.cshtml
@@ -4,5 +4,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div>
+    <h1 class="page-header">Features</h1>
+    <p class="lead"></p>
+    <p class="muted"></p>
+
+
+</div>
 
