--- a/src/RoslynMapper.WebSite/Views/Shared/_Layout.cshtml
+++ b/src/RoslynMapper.WebSite/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/mvcajax")
     @RenderSection("scripts", required: false)
 </body>
 </html>
