more document information

--- a/src/RoslynMapper.WebSite/Views/Benchmark/Index.cshtml
+++ b/src/RoslynMapper.WebSite/Views/Benchmark/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="page-header">Benchmark</h1>
 <p class="lead">We designed some benchmark tests for the most popular C# object mappers. </p>
-<p class="muted">RoslynMapper will have a big disadvantage in initialization. The compiling normall takes more than 2 seconds. This is just one time cost.</p>
+<p class="muted">RoslynMapper will have a big disadvantage in initialization. The compiling normall takes more than 2 seconds for the first time compiling. This is just one time cost.</p>
 <p class="muted">The benchmark test results are related to the test sample designs. The purpose of this benchmark is not trying to prove one mapper is better than the other. It is just a evaluation tool for RoslyMapper.</p>
 <p class="muted">Please click one of the following buttons to start a test.</p>
 
