--- a/src/RoslynMapper.WebSite/Views/GetStarted/Index.cshtml
+++ b/src/RoslynMapper.WebSite/Views/GetStarted/Index.cshtml
@@ -30,7 +30,7 @@ public class B
     <p>Set up the mapper(s) and build it in your program startup.</p>
 <pre class="prettyprint">
 var mapper = RoslynMapper.MapEngine.DefaultInstance;
-mapper.SetMapper&lt;a, b&gt;();
+mapper.SetMapper&lt;A, B&gt;();
 mapper.Build();
 </pre>
     <p>Map the object from A to B.</p>
