--- a/src/RoslynMapper.WebSite/Views/Document/Index.cshtml
+++ b/src/RoslynMapper.WebSite/Views/Document/Index.cshtml
@@ -77,6 +77,7 @@ public class B
 mapper.SetMapper&lt;A,B&gt;();
 </pre>
                 </div>
+                <p>RoslynMapper can map source type's properties, fields, methods (without parameters) to destination type's properties and fields. </p>
                 <p>However if you have two members that have different name but you want to bind them, for example,</p>
 <pre class="prettyprint">
 public class A
@@ -92,7 +93,10 @@ public class B
 mapper.SetMapper&lt;A, B&gt;().Bind(t1=&gt;t1.Name, t2=&gt;t2.OtherName);
 </pre>                
             </div>
-
+            <div id="ignore-member">
+                <h3>Ignore member</h3>
+                <p></p>
+            </div>
             <div id="type-resolver">
                 <h3>Type resolver</h3>
                 <p>Use type resolver to fully specify how to map source type object to destination object</p>
@@ -163,9 +167,9 @@ mapper.SetMapper&lt;A, B&gt;();
         <div class="col-md-3">
             <ul>
                 <li><a href="#name-convention">Name convention</a></li>
-                <li><a href="#name-convention">Setup Mappers</a></li>
-                <li><a href="#ignore-member">Ignore Member</a></li>
+                <li><a href="#name-convention">Setup Mappers</a></li>                
                 <li><a href="#name-convention">Member bind</a></li>
+                <li><a href="#ignore-member">Ignore Member</a></li>
                 <li><a href="#name-convention">Type resolver</a></li>
                 <li><a href="#name-convention">Member resolver</a></li>
                 <li><a href="#nested-member">Nested Member</a></li>
