--- a/src/RoslynMapper.WebSite/Views/Document/Index.cshtml
+++ b/src/RoslynMapper.WebSite/Views/Document/Index.cshtml
@@ -77,7 +77,7 @@ public class B
 mapper.SetMapper&lt;A,B&gt;();
 </pre>
                 </div>
-                <p>RoslynMapper can map source type's properties, fields, methods (without parameters) to destination type's properties and fields. </p>
+                <p>RoslynMapper can map source type's readable properties, fields, methods (without parameters) to destination type's writable properties and fields. </p>
                 <p>However if you have two members that have different name but you want to bind them, for example,</p>
 <pre class="prettyprint">
 public class A
