setmapper with maxDepth fix ReflectedType in lambda  issues

--- a/src/RoslynMapper.WebSite/Views/HowItWorks/Index.cshtml
+++ b/src/RoslynMapper.WebSite/Views/HowItWorks/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div>
     <h1 class="page-header">How it works</h1>
-    <p class="lead">Using the Microsoft Compile Platform (Rosyln) to compile the mapping logic into a in-memory danymic link library, RoslynMapper is able to achive a hand write mapping performance.</p>
+    <p class="lead">Using the Microsoft Compile Platform (Rosyln) to compile the mapping logic into a in-memory danymic link library, RoslynMapper is able to achieve a hand write mapping performance.</p>
     <p class="muted">Speed does matter in our applications.</p>
 
     <strong>RoslynMapper does one thing and only does one thing: Map object from one type to another type.  </strong>
